--- a/portforward/conf/profiles/010-basinsrv.conf
+++ b/portforward/conf/profiles/010-basinsrv.conf
@@ -13,3 +13,4 @@ pf_ports=
 # buffalo
 pf_ports="$pf_ports -R $pf_port_dvr__22:localhost:22"
 pf_ports="$pf_ports -R $pf_port_dvr__873:localhost:873"
+pf_ports="$pf_ports -R $pf_port_dvr__500:localhost:500"
