--- a/portforward/conf/profiles/010-basinsrv.conf
+++ b/portforward/conf/profiles/010-basinsrv.conf
@@ -2,10 +2,10 @@
 #pf_supports_opt_ServerAliveInterval=0
 #pf_supports_opt_N=0
 
-pf_ssh_extra_args="-oCheckHostIP=no -oExitOnForwardFailure=yes -oUserKnownHostsFile=$pf_ssh_confdir/known_hosts_basinsrv"
+pf_ssh_extra_args="-oCheckHostIP=no -oHostkeyAlias=basinsrv -oExitOnForwardFailure=yes -oUserKnownHostsFile=$pf_ssh_confdir/known_hosts_basinsrv"
 pf_ssh_userhost=dvr@basinsrv
 #pf_ssh_pass=
-pf_ssh_port=1402
+pf_ssh_port=1398
 pf_ssh_keepalive=1
 
 pf_ports=
